RESOLVED FIXED279286
Fix NoUncountedMemberChecker warnings in WebScreenOrientationManagerProxy, WebModelPlayerProvider, and WebSpeechSynthesisClient.
https://bugs.webkit.org/show_bug.cgi?id=279286
Summary Fix NoUncountedMemberChecker warnings in WebScreenOrientationManagerProxy, We...
Ryosuke Niwa
Reported 2024-09-06 14:38:12 PDT
Use smart pointers for member variables in these classes.
Attachments
Ryosuke Niwa
Comment 1 2024-09-06 14:48:12 PDT
EWS
Comment 2 2024-09-08 23:05:00 PDT
Committed 283330@main (39d2925d5952): <https://commits.webkit.org/283330@main> Reviewed commits have been landed. Closing PR #33263 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-08 23:05:14 PDT
Note You need to log in before you can comment on or make changes to this bug.